k8s-uiux.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: obj-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: obj-frontend
  template:
    metadata:
      labels:
        app: obj-frontend
    spec:
      nodeSelector:
        kubernetes.io/hostname: minikube-m02  
      containers:
        - name: frontend
          image: truong1301/ui_ux:v1.0.3
          ports:
            - containerPort: 8501

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  selector:
    app: obj-frontend
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
